# nvhpcTestFlags

./: CMakeLists.txt
runs/debug/: debug.nsys-rep  optimTest
runs/release_01/: optimTest  release_01.nsys-rep
runs/release_02/: optimTest  release_02.nsys-rep
runs/release_03/: optimTest  release_03.nsys-rep
runs/release_fast/: optimTest  release_fast.nsys-rep
src/: main.f90  mod_kernels.f90
